@@ -1,3 +1,5 @@
+* Invoice purchased product instead of received product
+
 Version 4.8.1 - 2018-05-21
 * Bug fixes (see mercurial logs for details)
 
